# CodeBrain

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: claude-md-snippet.md  installation.md  opencode.json
docs/: claude-md-snippet.md  guide.md  installation.md  opencode.json
src/codebrain/: __init__.py  init.py
src/codebrain/core/: __init__.py  config.py  formatting.py  interfaces.py  models.py  registry.py  toolchain.py  workspace.py
src/codebrain/fallback/: __init__.py  chain.py  govet_cli.py  hints.py  pyright_cli.py  tsc_cli.py
src/codebrain/lsp/: __init__.py  client.py  factory.py  protocol.py
src/codebrain/lsp/servers/: __init__.py  base.py  clangd.py  gopls.py  (+3 more)
src/codebrain/mcp/: __init__.py  __main__.py  cli.py  consolidated.py  server.py  tracing.py
src/codebrain/search/: __init__.py  index.py  parser.py  pattern.py  repomap.py  symbol.py  symbols.py
src/codebrain/skills/: __init__.py  contextual_diagnostics.py  impact_analysis.py  look_then_jump.py  signature_check.py  stack_trace.py
src/codebrain/tools/: __init__.py  navigation.py  search.py  validation.py
tests/: conftest.py  integration_test_mcp.py  test_chain.py  test_clangd.py  test_consolidated.py  test_factory.py  test_fallback.py  test_fallback_go.py  test_fallback_ts.py  test_file_watcher.py  test_formatting.py  test_gopls.py  test_health.py  test_hints.py  test_index.py  test_lsp_integration.py  test_models.py  test_monorepo_integration.py  test_protocol.py  test_registry.py  test_repomap.py  test_search.py  test_stack_trace.py  test_toolchain.py  test_typescript.py
