[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebrain"
version = "0.1.0"
description = "LSP-based code validation and structural syntax search"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "lsprotocol>=2023.0.0",
]

[project.optional-dependencies]
search = [
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-go>=0.23.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
watch = [
    "watchfiles>=1.0.0",
]
all = [
    "codebrain[mcp,search,watch]",
]

[project.scripts]
codebrain-mcp = "codebrain.mcp.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.400",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codebrain"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
